--- a/app.css
+++ b/app.css
@@ -1,3 +1,39 @@
-html {
+html {}
 
+body {}
+
+.bg-gradient {
+    height: 210px;
+    background-color: #7209B7;
+    background-image: linear-gradient(to bottom right, #F72585, #7209B7);
+    border-bottom: 10px solid black;
+}
+
+.logo-text {
+    font-size: 72px;
+}
+
+#rep {
+    color: #3c0779;
+}
+
+#hub {
+    color: #F72585;
+}
+
+#dot-io {
+    color: #3c0779;
+}
+
+/* .search-box {
+    font-size: 50px;
+    border: 2px solid black;
+    display: block;
+    margin: auto;
+} */
+/* Uncomment the above to override the default bootstrap search bar look. display and margin are still unncessary as long as the bootsrap class form-control is present. */
+
+.search-button {
+    display: block;
+    margin: auto;
 }
