--- a/static/app.css
+++ b/static/app.css
@@ -1,3 +1,4 @@
+@import url(https://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,regular,italic,500,500italic,700,700italic,900,900italic);
 html {
     /* background-color: gray IMPOR !important; */
     /* why doesnt this work? */
@@ -16,6 +17,24 @@ body {
 #body-copy{
     background-color: white;
     border-radius: 25px;
+}
+#return{
+    border: 2px solid #F72585;
+    color: black;
+    background-color: #F72585;
+    font-weight: bolder;
+    width: 75px;
+    height: 50px;
+    font-family: 'Roboto', sans-serif;
+    transition: 0.5s;
+    padding: 10px 25px;
+    border-radius: 15px;
+    text-decoration: none;
+}
+#return:hover{
+    border-color: #7209B7;
+    color: white;
+    box-shadow: 0 0.5em 0.5em -0.4em #7209B7;
 }
 
 .wrapper{
