--- a/templates/index.html
+++ b/templates/index.html
@@ -1,36 +1,23 @@
 <!doctype html>
 <html lang="en">
+{% include "header.html" %}
 
-<head>
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-  <!-- Bootstrap CSS -->
-
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <link rel="stylesheet" href="app.css">
-
-
-  <title>Rep_Hub.io - Reputation Tracker for GitHub Users</title>
-</head>
 
 <body>
-  <div class="container-fluid bg-gradient" id="header-div">
-    <h1 class="logo-text text-center"><span id="rep">REP</span><span id="hub">_HUB</span><span id="dot-io">.IO</span>
-    </h1>
-  </div>
+
   <br>
   <div class="container" id="body-area">
     <!-- <p class="text-center search-box">Search</p> -->
     <div class="wrapper">
-      <input type="search" class="form-control text-center search-box" id="mySearch" name="q"
-        placeholder="Enter GitHub Username...">
-      <!-- class="form-control" adds Bootstrap themeing to form box which spans it the lenght of the container, to match the large button.  -->
-      <br>
-      <button type="button" onclick="location.href='search-result.html'"
-        class="btn btn-secondary btn-lg btn-block">Search</button>
+       <form action="{{url_for('find_user')}}" method="POST">
+          {{ form.hidden_tag() }}
+
+          {{ form.user_search(placeholder="Github User") }}
+          {{ form.submit }}
+
+
+
+      </form>
       <!-- 'onclick="...'  takes user to search-result.html. This is a placeholder till an actual working search can happen. -->
     </div>
     <br>
