--- a/templates/search-result.html
+++ b/templates/search-result.html
@@ -1,38 +1,23 @@
 <!doctype html>
 <html lang="en">
 
-<head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="app.css">
-
-
-    <title>Rep_Hub.io - Reputation Tracker for GitHub Users</title>
-</head>
+    {% include "header.html" %}
 
 <body>
-    <div class="container-fluid bg-gradient">
-        <h1 class="logo-text text-center"><span id="rep">REP</span><span id="hub">_HUB</span><span
-                id="dot-io">.IO</span>
-        </h1>
-    </div>
+    
     <br>
     <div class="container">
         <div class="row">
-            <div class="col">Back to Search</div>
+            <div class="col">
+                <a href="{{url_for('home')}}" id="return">Back to Search</a>
+            </div>
         </div>
     </div>
     <br>
     <div class="container">
         <div class="row">
             <div class="col">PFP Placeholder</div>
-            <div class="col">Username</div>
+            <div class="col">{{name}}</div>
         </div>
         <Div class="row">Bio Placeholder Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil possimus itaque
             qui quo cum laboriosam iure laudantium. Fugiat quam nulla eum totam fugit maiores qui! Temporibus reiciendis
