--- a/templates/error.html
+++ b/templates/error.html
@@ -1,27 +1,10 @@
 <!doctype html>
 <html lang="en">
-
-<head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="app.css">
-
-
-    <title>Uh-oh... - 404 :'(</title>
-</head>
+{% extends "header.html" %}
+{% block title %}404 :({% endblock %}
 
 <body>
-    <div class="container-fluid bg-gradient-alt">
-        <h1 class="logo-text text-center"><span id="rep">REP</span><span id="hub">_HUB</span><span
-                id="dot-io">.IO</span>
-        </h1>
-    </div>
+    {% block content %}
     <br>
     <div class="container error-bg-md">
 
@@ -46,6 +29,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
+    {% endblock %}
 </body>
 
 </html>
