--- a/templates/index.html
+++ b/templates/index.html
@@ -1,17 +1,17 @@
 <!doctype html>
 <html lang="en">
-{% include "header.html" %}
-
+{% extends "header.html" %}
+{% block title %}Rep_Hub.io{% endblock %}
 
 <body>
-
+{% block content %}
   <br>
   <div class="container" id="body-area">
     <!-- <p class="text-center search-box">Search</p> -->
     <div class="wrapper">
        <form action="{{url_for('find_user')}}" method="POST">
           {{ form.hidden_tag() }}
-
+          {{ form.csrf_token() }}
           {{ form.user_search(placeholder="Github User") }}
           {{ form.submit }}
 
@@ -46,6 +46,7 @@
     <!-- Optional JavaScript | in BUNDLE form -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  {% endblock %}
 </body>
 
 </html>
