--- a/templates/search-result.html
+++ b/templates/search-result.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html lang="en">
 
-    {% include "header.html" %}
-
+    {% extends "header.html" %}
+    {% block title %}Rep_Hub.io{% endblock %}
 <body>
-    
+    {% block content %}
     <br>
     <div class="container">
         <div class="row">
@@ -53,6 +53,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
+    {% endblock %}
 </body>
 
 </html>
