--- a/templates/search-result.html
+++ b/templates/search-result.html
@@ -14,6 +14,9 @@
         </div>
     </div>
     <br>
+    <div id="flex-block">
+    <div id="text-block">
+
     <div class="container">
         <div class="row">
             <div class="col">PFP Placeholder</div>
@@ -48,6 +51,8 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
             integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     </div>
+        </div>
+        </div>
 
     <!-- Optional JavaScript | in BUNDLE form -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
