--- a/templates/error.html
+++ b/templates/error.html
@@ -6,6 +6,11 @@
 <body>
     {% block content %}
     <br>
+    <div class="row">
+        <div class="col">
+            <a href="{{url_for('home')}}" id="return">Back to Search</a>
+        </div>
+    </div>
     <div class="container error-bg-md">
 
         <!-- <p class="center-text display-1 error-text">Looks like you took a wrong turn past Albany</p> -->
