--- a/templates/search-result.html
+++ b/templates/search-result.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html lang="en">
 
-    {% include "header.html" %}
+{% include "header.html" %}
 
 <body>
-    
+
     <br>
     <div class="container">
         <div class="row">
@@ -14,14 +14,20 @@
         </div>
     </div>
     <br>
-    <div class="container">
+    <div class="container" id="gh-profile-searched">
         <div class="row">
-            <div class="col">PFP Placeholder</div>
+            <div class="col-3">pfp placeholder</div>
             <div class="col">{{name}}</div>
         </div>
-        <Div class="row">Bio Placeholder Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil possimus itaque
-            qui quo cum laboriosam iure laudantium. Fugiat quam nulla eum totam fugit maiores qui! Temporibus reiciendis
-            veniam porro eveniet!</Div>
+        <div class="row">
+            <div class="col-3"></div>
+            <!-- ^^^ white space for alignment -->
+            <div class="col">Bio Placeholder Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil possimus
+                itaque
+                qui quo cum laboriosam iure laudantium. Fugiat quam nulla eum totam fugit maiores qui! Temporibus
+                reiciendis
+                veniam porro eveniet!</div>
+        </div>
     </div>
     <br>
     <div class="container">
