--- a/static/app.css
+++ b/static/app.css
@@ -1,4 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,regular,italic,500,500italic,700,700italic,900,900italic);
+@import url(https://fonts.googleapis.com/css?family=Overpass:100,200,300,regular,500,600,700,800,900,100italic,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:300,regular,500,600,700,800,300italic,italic,500italic,600italic,700italic,800italic);
+
 html {
     /* background-color: gray IMPOR !important; */
     /* why doesnt this work? */
@@ -19,10 +22,12 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    font-family: 'Overpass',sans-serif;
 }
 #body-copy{
     background-color: white;
     border-radius: 25px;
+    font-family: 'Open Sans',sans-serif;
 }
 #return{
     border: 2px solid #F72585;
