--- a/templates/header.html
+++ b/templates/header.html
@@ -14,9 +14,14 @@
 
   <title>{% block title %}{% endblock %}</title>
 </head>
+<style>
+  #logo-head{
+    text-decoration: none;
+  }
+</style>
 <body>
 <div class="container-fluid bg-gradient-alt" id="header-div">
-    <h1 class="logo-text text-center"><span id="rep">REP</span><span id="hub">_HUB</span><span id="dot-io">.IO</span>
+    <h1 class="logo-text text-center"><a href="{{url_for('home')}}" id="logo-head"><span id="rep">REP</span><span id="hub">_HUB</span><span id="dot-io">.IO</span></a>
     </h1>
   </div>
     {% block content %}
