--- a/templates/search-result.html
+++ b/templates/search-result.html
@@ -1,8 +1,9 @@
 <!doctype html>
 <html lang="en">
 
-    {% extends "header.html" %}
-    {% block title %}Rep_Hub.io{% endblock %}
+{% extends "header.html" %}
+{% block title %}Rep_Hub.io{% endblock %}
+
 <body>
     {% block content %}
     <br>
@@ -14,45 +15,59 @@
         </div>
     </div>
     <br>
-    <div id="flex-block">
-    <div id="text-block">
+    <div class="container" id="body-copy-2">
+        <!-- <div id="text-block"> -->
 
-    <div class="container">
-        <div class="row">
-            <div class="col">
-                <img src="{{data['avatar_url']}}">
+        <div class="container" id="card-1">
+            <div class="row">
+                <div class="col-3 col-md-6">
+                    <img id="gh-pfp" src="{{data['avatar_url']}}">
+                </div>
+                <div class="col">{{username}} aka {{data['name']}}</div>
             </div>
-            <div class="col">{{username}} aka {{data['name']}}</div>
+            <div class="row">
+                <div class="col-3 col-md-6"></div>
+                <!-- ^^^ this is plain whitespace for formatting purposes -->
+                <Div class="col">Bio: {{data['bio']}}</Div>
+            </div>
+
         </div>
-        <Div class="row">{{data['bio']}}</Div>
-    </div>
-    <br>
-    <div class="container">
-        <div class="row">Rep: 800</div>
-        <!-- display value of rep score here^ -->
-        <div class="row">RECOMMENDED</div>
-        <div class="row">NOT RECOMMENDED</div>
-        <!-- only display 1 or these 2 rows, with the other one hidden. choose which one to display depending on user score. not exactly sure how to code that, so im just leaving both in. -->
-    </div>
-    <br>
-    <div class="container">
-        <div class="row"></div>
-        <div class="row">clickable down arrow</div>
-        <div class="row">large form for review</div>
-        <div class="row">submit review button</div>
-    </div>
-    <br>
-    <div class="container">
-        <div class="row">link to github profile of user leaving review with text being there name</div>
-        <div class="row">upvote or downvote arrow depending on neg or pos review (only display 1 arrow)</div>
-        <div class="row">review text placeholder Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum
-            omnis eveniet mollitia, facere nisi sit cumque quibusdam velit consequuntur. Rerum repellat veniam quos
-            maxime eligendi fugiat quo quasi. Nesciunt, officia!v</div>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-            integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    </div>
+        <br>
+        <div class="container card-2">
+            <div class="row text-center">Rep: 800</div>
+            <!-- display value of rep score here^ -->
+            <div class="row" id="rec">RECOMMENDED</div>
+            <div class="row" id="not-rec">NOT RECOMMENDED</div>
+            <!-- only display 1 or these 2 rows, with the other one hidden. choose which one to display depending on user score. not exactly sure how to code that, so im just leaving both in. -->
         </div>
+        <br>
+        <div class="container">
+            <div class="row"><img src="icon-pack/arrow-up.svg" alt="arrow up"> clickable up arrow</div>
+            <div class="row"><img src="/arrow-up-2.svg" alt="arrow up"> clickable up arrow</div>
+
+            <div class="row"><img src="../icon-pack/arrow-down.svg" alt="arrow up"> clickable down arrow</div>
+            <div class="row"><img src="../arrow-down-2.svg" alt="arrow up"> clickable down arrow</div>
+            <div class="row"><img src="../rep-hub/arrow-down-2.svg" alt="arrow up"> clickable down arrow</div>
+
+
+            <div class="row">large form for review</div>
+            <div class="row">submit review button</div>
         </div>
+        <br>
+        <div class="container">
+            <div class="row">link to github profile of user leaving review with text being there name</div>
+            <div class="row">upvote or downvote arrow depending on neg or pos review (only display 1 arrow)</div>
+            <div class="row">review text placeholder Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Voluptatum
+                omnis eveniet mollitia, facere nisi sit cumque quibusdam velit consequuntur. Rerum repellat veniam
+                quos
+                maxime eligendi fugiat quo quasi. Nesciunt, officia!v</div>
+            <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+                integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+                crossorigin="anonymous">
+        </div>
+        <!-- </div> -->
+    </div>
 
     <!-- Optional JavaScript | in BUNDLE form -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
