--- a/templates/search-result.html
+++ b/templates/search-result.html
@@ -41,14 +41,62 @@
             <!-- only display 1 or these 2 rows, with the other one hidden. choose which one to display depending on user score. not exactly sure how to code that, so im just leaving both in. -->
         </div>
         <br>
+        <!-- PROBLEMATIC SECTION BELOW -->
         <div class="container">
-            <div class="row"><img src="icon-pack/arrow-up.svg" alt="arrow up"> clickable up arrow</div>
-            <div class="row"><img src="/arrow-up-2.svg" alt="arrow up"> clickable up arrow</div>
+            <div class="row"><img src="icon-pack/arrow-up.svg" alt="DOESNT WORK"> clickable up arrow</div>
+            <div class="row"><img src="/arrow-up-2.svg" alt="CORRECT LINK, WORKS IN VS CODE"> clickable up arrow</div>
 
-            <div class="row"><img src="../icon-pack/arrow-down.svg" alt="arrow up"> clickable down arrow</div>
-            <div class="row"><img src="../arrow-down-2.svg" alt="arrow up"> clickable down arrow</div>
-            <div class="row"><img src="../rep-hub/arrow-down-2.svg" alt="arrow up"> clickable down arrow</div>
+            <div class="row"><img src="../icon-pack/arrow-down.svg" alt="CORRECT LINK, WORKS IN VS CODE"> clickable down
+                arrow</div>
+            <div class="row"><img src="./icon-pack/arrow-down.svg" alt="DOESNT WORK"> clickable down arrow</div>
 
+            <div class="row"><img src="../arrow-down-2.svg" alt="CORRECT LINK, WORKS IN VS CODE"> clickable down arrow
+            </div>
+            <div class="row"><img src="../arrow-up-2.svg" alt="CORRECT LINK, WORKS IN VS CODE"> clickable down arrow
+            </div>
+
+            <div class="row"><img src="../shell-command-syntax.svg" alt="CORRECT LINK, WORKS IN VS CODE"> test image
+                from my pc (svg)</div>
+            <div class="row"><img src="../pfp.png" alt="CORRECT LINK, WORKS IN VS CODE"> test image from my pc (png)
+            </div>
+
+            <div class="row"><img src="../icon-pack/shell-command-syntax.svg" alt="CORRECT LINK, WORKS IN VS CODE"> test
+                image from my pc
+                (svg)</div>
+            <div class="row"><img src="../icon-pack/pfp.png" alt="CORRECT LINK, WORKS IN VS CODE"> test image from my pc
+                (png)</div>
+
+            <div class="row"><img src="../shell-command-syntax.svg" alt="CORRECT LINK, WORKS IN VS CODE"> test image
+                from my pc (svg)</div>
+            <div class="row"><img src="../pfp.png" alt="CORRECT LINK, WORKS IN VS CODE"> test image from my pc (png)
+            </div>
+
+            <div class="row"><img src="../icon-pack/arrow-down.svg" alt="CORRECT LINK, WORKS IN VS CODE"> clickable down
+                arrow</div>
+            <div class="row"><img src="./icon-pack/arrow-down.svg" alt="DOESNT WORK"> clickable down arrow</div>
+
+            <div class="row"><img src="../arrow-down-2.svg" alt="CORRECT LINK, WORKS IN VS CODE"> clickable down arrow
+            </div>
+            <div class="row"><img src="../rep-hub/arrow-down-2.svg" alt="DOESNT WORK"> clickable down arrow</div>
+
+            <!-- THIS IS THE MOST FRUSTRATING PROBLEM I HAVE EVER ENCOUNTERED. THE STUPID LINKS ARE ALL RELATIVE AND MOST OF THEM ARE CORRECT, 
+                AS IN I CAN CLICK THEM IN VS CODE AND THEY WORK (ALL NOTED IN ALT PROPERTY). BUT THEN THEY ALL SHOW UP AS BROKEN LINKS IN CHROME -->
+
+            <!-- Something is happening in the terminal with the server, as each attempt to "get" the images returns a 404 at the end of
+                the link. I dont understand Python well enough to figure it out.
+
+                EXAMPLE terminal output (in yellow text): 
+                "GET /icon-pack/arrow-up.svg HTTP/1.1" 404 -
+                "GET /arrow-down-2.svg HTTP/1.1" 404 -
+                "GET /arrow-up-2.svg HTTP/1.1" 404 -
+                "GET /icon-pack/arrow-down.svg HTTP/1.1" 404 -
+                "GET /shell-command-syntax.svg HTTP/1.1" 404 -
+                "GET /pfp.png HTTP/1.1" 404 -
+                "GET /icon-pack/shell-command-syntax.svg HTTP/1.1" 404 -
+                "GET /icon-pack/pfp.png HTTP/1.1" 404 -
+                "GET /rep-hub/arrow-down-2.svg HTTP/1.1" 404 - -->
+
+            <!-- END PROBLMATIC SECTION -->
 
             <div class="row">large form for review</div>
             <div class="row">submit review button</div>
