--- a/templates/search-result.html
+++ b/templates/search-result.html
@@ -20,58 +20,67 @@
 
         <div class="container" id="card-1">
             <div class="row">
-                <div class="col-3 col-md-6">
+                <div class="col-3">
                     <img id="gh-pfp" src="{{data['avatar_url']}}">
                 </div>
                 <div class="col">{{username}} aka {{data['name']}}</div>
-            </div>
-            <div class="row">
-                <div class="col-3 col-md-6"></div>
-                <!-- ^^^ this is plain whitespace for formatting purposes -->
                 <Div class="col">Bio: {{data['bio']}}</Div>
             </div>
-
+            <br>
+            <div class="container">
+                <div class="row justify-content-center">Rep: 800</div>
+                <!-- display value of rep score here^ -->
+                <div class="row justify-content-center" id="rec">RECOMMENDED</div>
+                <div class="row justify-content-center" id="not-rec">NOT RECOMMENDED</div>
+                <!-- only display 1 or these 2 rows, with the other one hidden. choose which one to display depending on user score. not exactly sure how to code that, so im just leaving both in. -->
+            </div>
         </div>
         <br>
+        <div class="row justify-content-center">Please submit a review below:</div>
         <div class="container" id="card-2">
-            <div class="row text-center">Rep: 800</div>
-            <!-- display value of rep score here^ -->
-            <div class="row" id="rec">RECOMMENDED</div>
-            <div class="row" id="not-rec">NOT RECOMMENDED</div>
-            <!-- only display 1 or these 2 rows, with the other one hidden. choose which one to display depending on user score. not exactly sure how to code that, so im just leaving both in. -->
-        </div>
-        <br>
-        <!-- PROBLEMATIC SECTION BELOW -->
-        <div class="row">Leave a review below</div>
+            <img src="../static/arrow-up-2.svg" alt="clickable arrow" class="arrow-img" id="arrow-up">
+            <img src="../static/arrow-down-2.svg" alt="clickable arrow" class="arrow-img" id="arrow-down">
 
-        <div class="container" id="card-3">
-            <div class="row arrow-img"><img src="../static/arrow-up-2.svg" alt="clickable arrow"></div>
-            <div class="row arrow-img"><img src="../static/arrow-down-2.svg" alt="clickable arrow"></div>
-
-            <!-- Fixed the issue by placing images in the static folder.-->
 
             <form>
                 <div class="form-group user-review">
                     <label for="user-review"></label>
                     <textarea class="form-control" id="user-review-text" rows="3"></textarea>
                 </div>
-                <button class="btn btn-primary" type="submit">Submit Review</button>
+                <br>
+                <div class="col text-center">
+                    <button class="btn btn-primary" type="submit">Submit Review</button>
+                </div>
             </form>
+            <br>
         </div>
         <br>
-        <div class="container">
-            <div class="row">link to github profile of user leaving review with text being there name</div>
-            <div class="row">upvote or downvote arrow depending on neg or pos review (only display 1 arrow)</div>
+        <div class="row justify-content-center">Reviews from other users like you!</div>
+        <div class="container" id="card-3">
+            <div class="row">
+                <div class="col">link to github profile of user leaving review with text being there name</div>
+
+                <!-- <div class="row">upvote or downvote arrow depending on neg or pos review (only display 1 arrow)</div> -->
+                <img src="../static/arrow-up-2.svg" alt="clickable arrow" class="col arrow-review-img"
+                    id="arrow-review-up">
+                <img src="../static/arrow-down-2.svg" alt="clickable arrow" class="col arrow-review-img"
+                    id="arrow-review-down">
+            </div>
+            <br>
             <div class="row">review text placeholder Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Voluptatum
                 omnis eveniet mollitia, facere nisi sit cumque quibusdam velit consequuntur. Rerum repellat veniam
                 quos
                 maxime eligendi fugiat quo quasi. Nesciunt, officia!v</div>
-            <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-                integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-                crossorigin="anonymous">
+
         </div>
-        <!-- </div> -->
+    </div>
+    <br>
+    <div class="container">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+            integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    </div>
+    <!-- why is this here? is this needed? ^^^-->
     </div>
 
     <!-- Optional JavaScript | in BUNDLE form -->
